fixed spacing in user dash for edgecase pet

--- a/src/style/UserDash.css
+++ b/src/style/UserDash.css
@@ -119,6 +119,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .add-pet-button {
@@ -127,7 +128,6 @@
     font-family: Burma;
     font-size: 14pt;
     text-align: center;
-    vertical-align: middle;
     line-height: 75px;
     color: #F7FFF7;
     background-color: #1A535C;
@@ -140,6 +140,9 @@
 }
 
 .petthumbnailname {
+    width: 100px;
+    height: 50px;
+    word-wrap: break-word;
     font-size: 12pt;
     margin: 0;
 }
